--- a/blog/package.json
+++ b/blog/package.json
@@ -8,8 +8,9 @@
     "start-posts": "cd posts && npm start",
     "start-comments": "cd comments && npm start",
     "start-query": "cd query && npm start",
+    "start-moderation": "cd moderation && npm start",
     "start-event-bus": "cd event-bus && npm start",
-    "start": "concurrently \"npm run start-client\" \"npm run start-posts\" \"npm run start-comments\" \"npm run start-query\" \"npm run start-event-bus\""
+    "start": "concurrently \"npm run start-client\" \"npm run start-posts\" \"npm run start-comments\" \"npm run start-query\" \"npm run start-moderation\" \"npm run start-event-bus\""
   },
   "keywords": [],
   "author": "",
