Added a nord port service

--- a/blog/infra/k8s/posts-depl.yaml
+++ b/blog/infra/k8s/posts-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: posts
-          image: pandulaweerasooriya/posts:0.0.1
+          image: pandulaweerasooriya/posts
           resources:
             limits:
               memory: "128Mi"
