--- a/blog/infra/k8s/comment-depl.yaml
+++ b/blog/infra/k8s/comment-depl.yaml
@@ -1,36 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: event-bus
+  name: comments
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: event-bus
+      app: comments
   template:
     metadata:
       labels:
-        app: event-bus
+        app: comments
     spec:
       containers:
-        - name: event-bus
-          image: pandulaweerasooriya/event-bus
+        - name: comments
+          image: pandulaweerasooriya/comments
           resources:
             limits:
               memory: "128Mi"
               cpu: "0.1"
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: event-bus-srv
+  name: comments
 spec:
   selector:
-    app: event-bus
-  type: ClusterIP
+    app: comments
   ports:
-    - name: event-bus
-      port: 4005
+    - name: comments
+      port: 4001
+      targetPort: 4001
       protocol: TCP
-      targetPort: 4005
