--- a/blog/infra/k8s/posts-depl.yaml
+++ b/blog/infra/k8s/posts-depl.yaml
@@ -18,4 +18,17 @@ spec:
           resources:
             limits:
               memory: "128Mi"
-              cpu: "500m"
+              cpu: "0.1"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-clusterip-srv
+spec:
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      port: 4000
+      targetPort: 4000
+      protocol: TCP
